DashBoards UI New files added - [DashBoards] Files modified - [pages-config.json,Forms.html,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -272,6 +272,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_DashBoards" : {
+    "_id" : "wm-goToPage_DashBoards-wm.NavigationVariable-1489142536978",
+    "name" : "goToPage_DashBoards",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "DashBoards",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_DataEntry" : {
     "_id" : "wm-goToPage_DataEntry-wm.NavigationVariable-1478537977414",
     "name" : "goToPage_DataEntry",
