--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -39,6 +39,10 @@
     "type" : "integer"
   } ]
 }, {
+  "name" : "DashBoards",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "DataEntry",
   "type" : "PAGE",
   "params" : [ ]
