- Removed hideCart, preventing view logic from being a data storage - Replaced with a query that retrieves FeeIds from the table and a function that sees if the items are inside New files added - [GetCartItemIdsResponse.java] Files modified - [cx2_published_dataModel.json,QueryExecutionController.java,cx2-queries.hbm.xml,Forms.html,MasterInspections.java,Forms.js,app.variables.json,FormToInspectionCategoryMapping.java,Cx2QueryExecutorServiceImpl.java,Forms.variables.json,topnav.html,MyCart.variables.json,Fees.java,cx2_query.json,Cx2QueryExecutorService.java,db-connection-settings.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -1163,33 +1163,32 @@
     "isList" : false,
     "saveInPhonegap" : false
   },
-  "svNoOfItemsInUserCart" : {
-    "_id" : "wm-svNoOfItemsInUserCart-wm.ServiceVariable-1489135536990",
-    "name" : "svNoOfItemsInUserCart",
+  "svCartItemIds" : {
+    "_id" : "wm-svCartItemIds-wm.ServiceVariable-1489161244868",
+    "name" : "svCartItemIds",
     "owner" : "App",
     "category" : "wm.ServiceVariable",
     "dataBinding" : [ {
-      "target" : "user",
-      "value" : "bind:Variables.CurrentUserDetails.dataSet.id",
+      "target" : "userId",
+      "value" : "bind:Variables.loggedInUser.dataSet.id",
       "type" : "integer"
     } ],
-    "type" : "com.civicxpress.cx2.models.query.NoOfItemsInUserCartResponse",
+    "type" : "com.civicxpress.cx2.models.query.GetCartItemIdsResponse",
     "service" : "cx2",
-    "operation" : "executeNoOfItemsInUserCart",
-    "operationId" : "QueryExecutionController_executeNoOfItemsInUserCart",
+    "operation" : "executeGetCartItemIds",
+    "operationId" : "QueryExecutionController_executeGetCartItemIds",
     "operationType" : "get",
     "serviceType" : "DataService",
     "dataSet" : [ ],
     "isList" : true,
-    "maxResults" : 20,
+    "maxResults" : 9000,
     "designMaxResults" : 10,
     "startUpdate" : false,
     "autoUpdate" : true,
     "inFlightBehavior" : "executeLast",
     "transformationRequired" : false,
     "saveInPhonegap" : false,
-    "controller" : "QueryExecution",
-    "spinnerContext" : "page"
+    "controller" : "QueryExecution"
   },
   "UserOpenFormsCount" : {
     "_id" : "wm-UserOpenFormsCount-wm.Variable-1486466257530",
