Code Enforcement Dashboard New files added - [CodeEnforcementDashboard] Files modified - [leftnav.html,roles.json,pages-config.json,project-security.xml,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -174,6 +174,17 @@
     "isList" : false,
     "saveInPhonegap" : false
   },
+  "goToPage_CodeEnforcementDashboard" : {
+    "_id" : "wm-goToPage_CodeEnforcementDashboard-wm.NavigationVariable-1489466664404",
+    "name" : "goToPage_CodeEnforcementDashboard",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "CodeEnforcementDashboard",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_CompanyForms" : {
     "_id" : "wm-goToPage_CompanyForms-wm.NavigationVariable-1480417618463",
     "name" : "goToPage_CompanyForms",
