--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -7,6 +7,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "CodeEnforcementDashboard",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "Common",
   "type" : "PARTIAL",
   "params" : [ ]
