My Case Types New files added - [ManageCases] Files modified - [pages-config.json,cx2_published_dataModel.json,CaseTypes.java,CodeEnforcementDashboard.html,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -433,6 +433,17 @@
     "operation" : "gotoPage",
     "pageName" : "Main"
   },
+  "goToPage_ManageCases" : {
+    "_id" : "wm-goToPage_ManageCases-wm.NavigationVariable-1489471343380",
+    "name" : "goToPage_ManageCases",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ManageCases",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ManageCompanies" : {
     "_id" : "wm-goToPage_ManageCompanies-wm.NavigationVariable-1484344579277",
     "name" : "goToPage_ManageCompanies",
