--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -103,6 +103,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ManageCases",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ManageCompanies",
   "type" : "PAGE",
   "params" : [ ]
