CaseStatuses DB Changes New files added - [CaseStatusesController.java,CaseStatusesService.java,CaseStatuses.java,CaseStatusesDao.java,CaseStatusesServiceImpl.java] Files modified - [cx2_published_dataModel.json,CaseTypesService.java,ProjectsService.java,ProjectsServiceImpl.java,MunicipalitiesController.java,Projects.java,FormTypesService.java,UsersController.java,CaseTypes.java,GisrecordsServiceImpl.java,Municipalities.java,MunicipalitiesServiceImpl.java,GisrecordsService.java,CaseTypesController.java,FormTypesServiceImpl.java,States.java,FormTypesController.java,MasterCases.java,FormTypes.java,StatesServiceImpl.java,UsersService.java,Users.java,StatesController.java,GisrecordsController.java,StatesService.java,Gisrecords.java,ProjectsController.java,CaseTypesServiceImpl.java,UsersServiceImpl.java,MunicipalitiesService.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -182,6 +182,9 @@
   }, {
     "table" : "VendorUsers",
     "schema" : "cx2"
+  }, {
+    "table" : "CaseStatuses",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
   "impersonateUser" : false,
