EditCase UI New files added - [EditCase] Files modified - [pages-config.json,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -316,6 +316,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_EditCase" : {
+    "_id" : "wm-goToPage_EditCase-wm.NavigationVariable-1489476287938",
+    "name" : "goToPage_EditCase",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "EditCase",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_EditForm" : {
     "_id" : "wm-goToPage_EditForm-wm.NavigationVariable-1480049657857",
     "name" : "goToPage_EditForm",
