Case Type -Statuses Files modified - [CaseStatusesController.java,cx2_published_dataModel.json,EditCase.html,ProjectsService.java,CaseStatusesService.java,ProjectsServiceImpl.java,MunicipalitiesController.java,app.variables.json,Projects.java,FormTypesService.java,UsersController.java,EditCase.variables.json,GisrecordsServiceImpl.java,EditCase.js,Municipalities.java,MunicipalitiesServiceImpl.java,GisrecordsService.java,pages-config.json,FormTypesServiceImpl.java,CaseStatuses.java,FormTypesController.java,CaseStatusesServiceImpl.java,ManageCases.html,FormTypes.java,UsersService.java,Users.java,GisrecordsController.java,Gisrecords.java,ProjectsController.java,UsersServiceImpl.java,MunicipalitiesService.java,db-connection-settings.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -321,10 +321,18 @@
     "name" : "goToPage_EditCase",
     "owner" : "App",
     "category" : "wm.NavigationVariable",
-    "dataBinding" : [ ],
+    "dataBinding" : [ {
+      "target" : "pageName",
+      "value" : "EditCase",
+      "type" : "string"
+    } ],
     "operation" : "gotoPage",
     "pageName" : "EditCase",
-    "dataSet" : [ ],
+    "dataSet" : [ {
+      "type" : "integer",
+      "target" : "CaseTypeId",
+      "value" : "bind:Widgets.gridCasetypes.selecteditem.id"
+    } ],
     "pageTransitions" : "none"
   },
   "goToPage_EditForm" : {
