Selected Case New files added - [ViewCase] Files modified - [pages-config.json,EditInspection.variables.json,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -839,6 +839,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_ViewCase" : {
+    "_id" : "wm-goToPage_ViewCase-wm.NavigationVariable-1489486004689",
+    "name" : "goToPage_ViewCase",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ViewCase",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ViewProject" : {
     "_id" : "wm-goToPage_ViewProject-wm.NavigationVariable-1486718548788",
     "name" : "goToPage_ViewProject",
