--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -263,6 +263,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ViewCase",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ViewProject",
   "type" : "PAGE",
   "params" : [ {
