ViewInspections page New files added - [ViewInspection] Files modified - [pages-config.json,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -850,6 +850,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_ViewInspection" : {
+    "_id" : "wm-goToPage_ViewInspection-wm.NavigationVariable-1489488795493",
+    "name" : "goToPage_ViewInspection",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ViewInspection",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ViewProject" : {
     "_id" : "wm-goToPage_ViewProject-wm.NavigationVariable-1486718548788",
     "name" : "goToPage_ViewProject",
