--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -267,6 +267,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ViewInspection",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ViewProject",
   "type" : "PAGE",
   "params" : [ {
