--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -8505,7 +8505,7 @@
     "liveSource" : "cx2",
     "ignoreCase" : true,
     "matchMode" : "start",
-    "orderBy" : "createdAt asc,name asc",
+    "orderBy" : "endAt asc,startAt asc",
     "propertiesMap" : {
       "columns" : [ {
         "fieldName" : "projects",
