UpdateProject Task assignedto bug Files modified - [ViewProject.js,ViewProject.html,ViewProject.variables.json,Forms.js]

--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -1737,10 +1737,10 @@
           "defaultValue" : "SYSUTCDATETIME()",
           "scale" : 0
         }, {
-          "fieldName" : "submittedOn",
+          "fieldName" : "dateSubmitted",
           "type" : "timestamp",
           "fullyQualifiedType" : "timestamp",
-          "columnName" : "SubmittedOn",
+          "columnName" : "DateSubmitted",
           "isPrimaryKey" : false,
           "notNull" : false,
           "length" : 0,
