presentation cleanup and explanatory text added Files modified - [ManageProjects.html,ManageProjects.variables.json]

--- a/src/main/webapp/pages/ManageProjects/ManageProjects.variables.json
+++ b/src/main/webapp/pages/ManageProjects/ManageProjects.variables.json
@@ -39,7 +39,7 @@
     "liveSource" : "cx2",
     "ignoreCase" : true,
     "matchMode" : "start",
-    "orderBy" : "projectGuid asc",
+    "orderBy" : "projectName asc",
     "propertiesMap" : {
       "columns" : [ {
         "fieldName" : "municipalities",
