- Basic eSign genie testing implementation - code for pdf creation - "Changed" DigitalSignatures to RequireSignature - Added lots of stuff for LeadTools New files added - [servicedef.xml,DocumentService.spring.xml,eSignGenieApi.java,DocumentService.java,DocumentController.java,pdfbox-2.0.5.jar,README.md,javax.ws.rs-api-2.0-m02.jar] Files modified - [cx2_published_dataModel.json,FormController.java,NewForm.js,project-services.xml,index.html,EditForm.variables.json,MasterInspections.java,serviceConfig.json,FormToInspectionCategoryMapping.java,FormTypes.java,MasterCases.java,Utils.js,NewForm.variables.json,Main.js,Leadtools.Documents.js,FormService.java,EditForm.html,FindForm.variables.json,pom.xml,app.js,index.mobile.html,db-connection-settings.json]

--- a/src/main/webapp/resources/leadTools/serviceConfig.json
+++ b/src/main/webapp/resources/leadTools/serviceConfig.json
@@ -1,9 +1,7 @@
-﻿{
-   "_comment_": "This file is used if an external application needs to change the values the client application will use to communicate with the service.",
-
-   "licenseDirectory": "LEADTOOLS",
-
-   "serviceHost": "http://localhost:19000",
-   "servicePath": "",
-   "serviceApiPath":  "api"
+{
+  "_comment_" : "This file is used if an external application needs to change the values the client application will use to communicate with the service.",
+  "licenseDirectory" : "LEADTOOLS",
+  "serviceHost" : "/CivicXpress",
+  "servicePath" : "/services",
+  "serviceApiPath" : "document"
 }
