--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/DocumentService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/FileService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -164,6 +171,7 @@
                         <configuration>
                             <sources>
                                 <source>services/CXPasswordResetService/src</source>
+                                <source>services/DocumentService/src</source>
                                 <source>services/FileService/src</source>
                                 <source>services/FormMessagingMailService/src</source>
                                 <source>services/FormService/src</source>
@@ -401,6 +409,20 @@
             <version>1.0</version>
             <scope>system</scope>
             <systemPath>${basedir}/lib/httpmime-4.5.3.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>javax.ws.rs-api-2.0-m02</groupId>
+            <artifactId>javax.ws.rs-api-2.0-m02</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/javax.ws.rs-api-2.0-m02.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>pdfbox-2.0.5</groupId>
+            <artifactId>pdfbox-2.0.5</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/pdfbox-2.0.5.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>sqljdbc4-4.0</groupId>
