- Fixed some issues with eSignGenie New files added - [fontbox-2.0.5.jar] Files modified - [FormController.java,FormService.java,eSignGenieApi.java,pom.xml]

--- a/pom.xml
+++ b/pom.xml
@@ -397,6 +397,13 @@
             <systemPath>${basedir}/lib/DBUtils.jar</systemPath>
         </dependency>
         <dependency>
+            <groupId>fontbox-2.0.5</groupId>
+            <artifactId>fontbox-2.0.5</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/fontbox-2.0.5.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>httpclient-4.5.3</groupId>
             <artifactId>httpclient-4.5.3</artifactId>
             <version>1.0</version>
