removed "Delete" icon from ManageProjects- no permanent-deleting of projects allowed. Updated CXAdmin/CXProjects tile count query to display only active=true New files added - [CountOfCxprojectsActiveResponse.java] Files modified - [Cx2QueryExecutorServiceImpl.java,ManageProjects.html,cx2-queries.hbm.xml,QueryExecutionController.java,ManageProjects.variables.json,cx2_query.json,CXAdmin.variables.json,Cx2QueryExecutorService.java] Removed files - [CountOfCxprojectsResponse.java]

--- a/src/main/webapp/pages/ManageProjects/ManageProjects.variables.json
+++ b/src/main/webapp/pages/ManageProjects/ManageProjects.variables.json
@@ -39,7 +39,7 @@
     "liveSource" : "cx2",
     "ignoreCase" : true,
     "matchMode" : "start",
-    "orderBy" : "projectName asc",
+    "orderBy" : "active desc,municipalities.municipalityName asc,projectName asc",
     "propertiesMap" : {
       "columns" : [ {
         "fieldName" : "municipalities",
