--- a/src/main/webapp/resources/leadTools/serviceConfig.json
+++ b/src/main/webapp/resources/leadTools/serviceConfig.json
@@ -2,6 +2,6 @@
   "_comment_" : "This file is used if an external application needs to change the values the client application will use to communicate with the service.",
   "licenseDirectory" : "LEADTOOLS",
   "serviceHost" : "/CivicXpress",
-  "servicePath" : "/services",
-  "serviceApiPath" : "document"
+  "servicePath" : "services",
+  "serviceApiPath" : "documentProxy"
 }
