created framework for MyFees page. updated locations sitewide to replace "Vendor" labels with "Contractor" New files added - [MyFees] Files modified - [UserClosedForms.variables.json,pages-config.json,Main.html,VendorApplication.html,FindForm.html,ManageMunicipalityVendors.variables.json,NewForm.html,ViewProject.html,EditInspection.html,Forms.html,MyMunicipality.html,UserOpenForms.html,DashBoards.html,app.variables.json,ManageMunicipalityVendors.html,VendorApplication.variables.json,CompanyMunicipalities.html,EditForm.html,FindForm.variables.json,pom.xml,EditGISRecord.html,UserClosedForms.html,ProcessForms.html]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -661,6 +661,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_MyFees" : {
+    "_id" : "wm-goToPage_MyFees-wm.NavigationVariable-1490104122146",
+    "name" : "goToPage_MyFees",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "MyFees",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_MyMunicipality" : {
     "_id" : "wm-goToPage_MyMunicipality-wm.NavigationVariable-1478577159145",
     "name" : "goToPage_MyMunicipality",
