--- a/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
@@ -38,7 +38,7 @@
       "icon" : "glyphicon glyphicon-home",
       "link" : "#/Main"
     }, {
-      "label" : "Vendor Application",
+      "label" : "Contractor Application",
       "icon" : "wi wi-ellipsis-v",
       "link" : "#/VendorApplication"
     } ],
