--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -195,6 +195,10 @@
     "type" : "integer"
   } ]
 }, {
+  "name" : "MyFees",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "MyMunicipality",
   "type" : "PAGE",
   "params" : [ ]
