- LeadTools is working better Files modified - [Main.js,Leadtools.Documents.js,pom.xml,DocumentProxyService.java,serviceConfig.json,DocumentProxyController.java]

--- a/src/main/webapp/resources/leadTools/serviceConfig.json
+++ b/src/main/webapp/resources/leadTools/serviceConfig.json
@@ -1,7 +1,7 @@
 {
   "_comment_" : "This file is used if an external application needs to change the values the client application will use to communicate with the service.",
   "licenseDirectory" : "LEADTOOLS",
-  "serviceHost" : "/CivicXpress",
-  "servicePath" : "services",
-  "serviceApiPath" : "documentProxy"
+  "serviceHost" : "https://civic-dev.com/",
+  "servicePath" : "documentsService",
+  "serviceApiPath" : "api"
 }
