--- a/profiles/development.properties
+++ b/profiles/development.properties
@@ -29,6 +29,6 @@ security.general.rememberMe.timeOut=1296000
 security.general.session.timeout=30
 security.general.ssl.enabled=false
 security.general.ssl.port=443
-security.general.xsrf.enabled=false
+security.general.xsrf.enabled=true
 security.general.xss.enabled=false
 security.providers=DATABASE
