Mailing Service Implementation for Project Messages New files added - [ProjectMessagingMailService] Files modified - [ViewProject.js,project-services.xml,pom.xml,ViewProject.variables.json]

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/ProjectMessagingMailService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/ProjectTaskAssignment/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -185,6 +192,7 @@
                                 <source>services/FormMessagingMailService/src</source>
                                 <source>services/FormService/src</source>
                                 <source>services/FormStatusUpdate/src</source>
+                                <source>services/ProjectMessagingMailService/src</source>
                                 <source>services/ProjectTaskAssignment/src</source>
                                 <source>services/ResetPasswordMailService/src</source>
                                 <source>services/UpdateRecordStatus/src</source>
