--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -8108,6 +8108,10 @@
       "target" : "relatedProjectGuid",
       "value" : "bind:pageParams.ProjectGUID",
       "type" : "string"
+    }, {
+      "target" : "municipalityMessage",
+      "value" : false,
+      "type" : "boolean"
     } ],
     "operation" : "read",
     "dataSet" : [ ],
