Fetching User fee with procedures for Pagination and Filtering by Municipality New files added - [procedure] Files modified - [Forms.js,MyFees.variables.json,ProcedureExecutionController.java,MyFees.html,Cx2ProcedureExecutorService.java,MyFees.js,cx2-procedures.mappings.json,cx2_procedure.json,Cx2ProcedureExecutorServiceImpl.java]

--- a/services/cx2/src/cx2-procedures.mappings.json
+++ b/services/cx2/src/cx2-procedures.mappings.json
@@ -1,1 +1,22 @@
-{ }
+{
+  "fetchUnpaidFeesOfFormsForCreatedByAndSharedWith" : {
+    "procedureString" : "EXEC cx2.fetchUnpaidFeesOfFormsForCreatedByAndSharedWith @MunicipalityId= ?,@UserId= ?",
+    "parameters" : [ {
+      "name" : "MunicipalityId",
+      "type" : "integer",
+      "list" : false,
+      "variableType" : "PROMPT",
+      "testValue" : "2",
+      "required" : true,
+      "parameterType" : "IN"
+    }, {
+      "name" : "UserId",
+      "type" : "integer",
+      "list" : false,
+      "variableType" : "PROMPT",
+      "testValue" : "3",
+      "required" : true,
+      "parameterType" : "IN"
+    } ]
+  }
+}
