Reflections for Changes in fetching Fees by Procedures Files modified - [MyFees.variables.json,MyFees.html,MyFees.js,Forms.variables.json,topnav.html,MyCart.variables.json,Forms.js,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -1248,9 +1248,9 @@
     "isList" : false,
     "saveInPhonegap" : false
   },
-  "svCartItemIds" : {
-    "_id" : "wm-svCartItemIds-wm.ServiceVariable-1489161244868",
-    "name" : "svCartItemIds",
+  "svCartIds" : {
+    "_id" : "wm-svCartItemIds-wm.ServiceVariable-1490685014948",
+    "name" : "svCartIds",
     "owner" : "App",
     "category" : "wm.ServiceVariable",
     "dataBinding" : [ {
